--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -26,6 +26,6 @@ section: post
   </article>
 
   <nav>
-    <a href="{{ '/blog/' | url }}">← View All Articles</a>
+    <a href="{{ '/blog/' | url }}">← Vai a tutti gli articoli</a>
   </nav>
 </div>
