--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,7 @@
 <footer class="site-footer">
   <small>
-    Website built with <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>.
-    Source code on <a href="{{ pkg.repository.url }}" target="_blank">GitHub</a>.
+    Sito web costruito con <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>.
+    {# Codice sorgente su <a href="{{ pkg.repository.url }}" target="_blank">GitHub</a>. #}
+    Grazie a 👋 <a href="https://www.tylerroderick.com/" target="_blank">Tyler M. Roderick</a> per il suo tema <a href="https://github.com/TylerMRoderick/fernfolio-11ty-template?tab=readme-ov-file" target="_blank">Fernfolio</a>. 
   </small>
 </footer>
