--- a/src/_layouts/project.njk
+++ b/src/_layouts/project.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-section: project
+section: esperienza
 ---
 <div class="page-container">
   <h1>
@@ -11,6 +11,6 @@ section: project
   <hr/>
   {{ layoutContent | safe }}
   <nav>
-    <a href="{{ '/projects/' | url }}">← View All Projects</a>
+    <a href="{{ '/projects/' | url }}">← Vai a tutte le esperienze</a>
   </nav>
 </div>
