--- a/src/assets/scss/global/utilites.scss
+++ b/src/assets/scss/global/utilites.scss
@@ -17,7 +17,8 @@
 }
 
 .gradient-text {
-  background: linear-gradient(130deg, #5183f5, #af002d 41.07%, #c79191 76.05%);
+  // background: linear-gradient(130deg, #5183f5, #af002d 41.07%, #c79191 76.05%);
+  background: linear-gradient(130deg, darkorchid, #32CD32 40%, #FFD700 56.05%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
