--- a/src/index.njk
+++ b/src/index.njk
@@ -34,7 +34,7 @@ section: home
 
   {# Articles #}
   <div class="list-header">
-    <h2 class="list-header__title">Ultimi post</h2>
+    <h2 class="list-header__title">Alcune riflessioni</h2>
     <a class="btn btn--outline btn--sm" href="/blog">Vai agli altri post</a>
   </div>
   {% from "macros/articlelist.njk" import articlelist %}
