--- a/src/_includes/partials/form.njk
+++ b/src/_includes/partials/form.njk
@@ -1,4 +1,5 @@
 <form class="contact-form" name="contact" method="POST" data-netlify="true">
+  <input type="hidden" name="subject" value="Nuovo messaggio su %{formName} - (%{submissionId})"" />
   <label for="name">nome</label>
   <input
     type="text"
@@ -20,6 +21,20 @@
     pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$"
     required
   >
+  <label for="phone">telefono</label>
+  <input
+    type="phone"
+    name="phone"
+    id="phone"
+    autocomplete="phone"
+    placeholder="numero di telefono"
+  >
+  <label>argomento: </label>
+  <select name="argomento[]" multiple required placeholder="per cosa mi contatti?">
+      <option value="accessibilita">accessibilità</option>
+      <option value="digital marketing">digital marketing</option>
+      <option value="altro">altro..</option>
+    </select>
   <label for="message">messaggio</label>
   <textarea name="message" id="message" placeholder="scrivi qui il tuo messaggio, grazie!" rows="7" required></textarea>
   <button class="contact-form__submit btn" type="submit" name="submit">invia</button>
