--- a/src/assets/scss/components/site-header.scss
+++ b/src/assets/scss/components/site-header.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin: 3px 12px 0;
   padding: 8px 10px;
   border: 1px solid var(--color-border);
@@ -26,9 +26,22 @@
     margin: 3px auto 0;
   }
 
+  svg path#sole-giallo {
+     fill: #fcdb54; 
+  }
+
   :root[data-theme="dark"] & {
     background-color: var(--color-bg-secondary-dark);
+
+    svg g#contorni path {
+      fill: white;
+    }
+    svg path#sole-giallo {
+      fill: orange;
+    }
   }
+
+  
 }
 
 .site-header__logo-container {
@@ -40,14 +53,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
+  width: 80px;
   height: 30px;
   padding: 6px 8px;
   border-radius: var(--border-radius-sm);
   color: var(--color-text);
 
   @media (min-width: 1024px) {
-    width: 40px;
+    width: 110px;
     height: 40px;
   }
 
@@ -65,12 +78,18 @@
   :root[data-theme="dark"] & {
     color: var(--color-title-dark);
   }
+
+  svg path#sole {
+    fill: orange;
+}
+
 }
 
 .site-header__nav {
   display: none;
   width: 100%;
   margin-top: 15px;
+  margin-left:auto;
 
   @media (min-width: 1024px) {
     display: block;
@@ -86,6 +105,7 @@
   background: none;
   color: var(--color-text);
   transition: opacity 0.2s ease;
+  margin-left:auto;
 
   &:hover {
     opacity: 0.8;
