--- a/src/assets/scss/global/base-styles.scss
+++ b/src/assets/scss/global/base-styles.scss
@@ -272,7 +272,7 @@ input[type='button'] {
 
   :root[data-theme="dark"] & {
     color: var(--color-title-dark);
-    background-color: var(--color-link-dark);
+    background-color: var(--color-secondary-dark);
   }
 }
 
