--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -1,12 +1,12 @@
 :root {
   /* Brand Colors */
   --color-primary: #222;
-  --color-secondary: #2f5bc2;
+  --color-secondary: darkorchid;
 
   /* Background Colors */
   --color-bg: #fff;
   --color-bg-secondary: #f7f7f7;
-  --color-bg-accent: rgb(174, 182, 225);
+  --color-bg-accent: #fcdb54; /* rgb(174, 182, 225); */
   --color-bg-hover: #f3f4f6cc;
 
   /* Text and Border Colors */
@@ -36,14 +36,14 @@
   --shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 
   // Dark mode colors
-  --color-secondary-dark: rgb(22, 78, 99);
+  --color-secondary-dark: green; /* rgb(22, 78, 99); */
 
-  --color-link-dark: rgb(8, 145, 178);
+  --color-link-dark: #0BDA51; /* rgb(8, 145, 178); */
 
   --color-bg-dark: #000;
   --color-bg-wrapper-bg-dark: rgb(24 24 27);
   --color-bg-secondary-dark: rgb(42 42 43);
-  --color-bg-accent-dark: rgb(8, 51, 68);
+  --color-bg-accent-dark: #ffa500; /* rgb(8, 51, 68) */
 
   --color-title-dark: rgb(244 244 245);
   --color-text-dark: rgb(161 161 170);
