removed blog from nav - added experiences

--- a/src/_layouts/project.njk
+++ b/src/_layouts/project.njk
@@ -11,6 +11,6 @@ section: esperienza
   <hr/>
   {{ layoutContent | safe }}
   <nav>
-    <a href="{{ '/projects/' | url }}">← Vai a tutte le esperienze</a>
+    <a href="{{ '/esperienze/' | url }}">← Vai a tutte le esperienze</a>
   </nav>
 </div>
