theme switcher via mobile

--- a/src/_includes/partials/drawer.njk
+++ b/src/_includes/partials/drawer.njk
@@ -28,6 +28,15 @@
           </a>
         </li>
       {%- endfor %}
+
+      {% if global.enable_theme_switch %}
+        <li class="drawer__nav-item">
+          <button class="site-header__link site-header__link--theme-switch" data-theme-switch>
+            {{ global.switch_theme_icon | svg | safe }}
+            <span class="drawer__text-theme-switch">cambia tema</span>
+          </button>
+        </li>
+      {% endif %}
       </ul>
     </div>
   </div>
