--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ section: home
       <h1 class="hero__title gradient-text">{{ home.title }}</h1>
       {% if home.body %}
         <div class="hero__body">{{ home.body | markdown | safe }}
-          <a href="/contatti">Hai un progetto di cui parlare?</a>
+          <a class="hero__link" href="/contatti">Hai un progetto di cui parlare?</a>
         </div>
         
       {% endif %}
