--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <small>
-    AUM di Adriano Urso - P.IVA IT12373000962 | Per ulteriori informazionin: <a href="/contatti" target="_blank">contattami</a>.<br> 
+    AUM di Adriano Urso - P.IVA IT12373000962 | Per ulteriori informazioni: <a href="/contatti" target="_blank">contattami</a>.<br> 
     Sito web costruito con <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>.
     {# Codice sorgente su <a href="{{ pkg.repository.url }}" target="_blank">GitHub</a>. #}
     Grazie a 👋 <a href="https://www.tylerroderick.com/" target="_blank">Tyler M. Roderick</a> per il suo tema <a href="https://github.com/TylerMRoderick/fernfolio-11ty-template?tab=readme-ov-file" target="_blank">Fernfolio</a>. 
