custom success form page

--- a/src/_includes/partials/form.njk
+++ b/src/_includes/partials/form.njk
@@ -1,4 +1,4 @@
-<form class="contact-form" name="contact" method="POST" data-netlify="true">
+<form class="contact-form" name="contact" method="POST" data-netlify="true" action="/form-inviato-grazie">
   <input type="hidden" name="subject" value="Nuovo messaggio su %{formName} - (%{submissionId})"" />
   <label for="name">nome</label>
   <input
