--- a/src/_includes/partials/form.njk
+++ b/src/_includes/partials/form.njk
@@ -33,6 +33,8 @@
   <select name="argomento[]" multiple required placeholder="per cosa mi contatti?">
       <option value="accessibilita">accessibilità</option>
       <option value="digital marketing">digital marketing</option>
+      <option value="business development">business development</option>
+      <option value="facilitazione">facilitazione</option>
       <option value="altro">altro..</option>
     </select>
   <label for="message">messaggio:</label>
