--- a/src/_layouts/contact.njk
+++ b/src/_layouts/contact.njk
@@ -4,6 +4,11 @@ section: contact
 ---
 <div class="page-container">
   <h1>{{ title }}</h1>
+  
+  {% if subtitle %}
+    <p>{{ subtitle }}</p>
+  {% endif %}
+
   <hr/>
   {{ layoutContent | safe }}
 
