--- a/src/assets/scss/layouts/home.scss
+++ b/src/assets/scss/layouts/home.scss
@@ -1,6 +1,6 @@
 .home-page {
   max-width: var(--site-width);
-  margin: 0 auto 60px;
+  margin: 0 auto;
   padding: 0 20px 20px;
 
   @media (min-width: 1024px) {
