--- a/src/_layouts/contact.njk
+++ b/src/_layouts/contact.njk
@@ -13,4 +13,11 @@ section: contact
   {{ layoutContent | safe }}
 
   {% include "partials/form.njk" %}
+
+
+  <div class="hero__body">Grazie! 👋<br>
+    <a class="hero__link" href="/">← Torna alla home</a>
+  </div>
+
 </div>
+
