--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ section: home
       <h1 class="hero__title gradient-text">{{ home.title }}</h1>
       {% if home.body %}
         <div class="hero__body">{{ home.body | markdown | safe }}
-          <a class="hero__link" href="/contatti">Hai un progetto? Parliamone!</a>
+          Hai un progetto? 📞  <a class="hero__link" href="/contatti">Parliamone!</a> 
         </div>
         
       {% endif %}
@@ -67,8 +67,18 @@ section: home
   ) }}
   -->
 
-  <div class="hero__body">Ci siamo conosciuti in fiera?
-    <a class="hero__link" href="/contatti">Rimaniamo in contatto!</a>
+  <div class="hero__body">Ci siamo conosciuti in <strong>fiera</strong>? 
+    Allora probabilmente lavori in ambito <strong>food & beverage</strong>. 
+    In questo settore con <a href="https://richclicks.it" target="_blank">RichClicks</a> 
+    abbiamo aumentato per alcuni nostri clienti, l’ecommerce revenue del +82% YoY, 
+    raggiunto il +22% in AOV e portato a 5.75 il ROAS (+111.1% YoY). 
+    Creando <strong>strategie multicanale</strong>, anche <strong>in ambito B2B</strong>, 
+    includendo strumenti avanzati di <strong>automazione</strong> e <strong>intelligenza artificiale</strong> 
+    per massimizzare i risultati.<br><br>
+    Sarebbe un vero piacere potervi raccontare di più sul nostro lavoro 
+    e condividere alcuni dei nostri <a href="https://www.richclicks.it/casi-studio-food" target="_blank">casi di successo</a> 
+    con brand come Malastrana, Camoscio D’Oro, 33Fuel, Bontasana, e Prodotti Spiga.<br><br>
+    ☎️ Cosa ne dici, <a class="hero__link" href="/contatti">organizziamo una chiamata?</a> 
   </div>
 
 </div>
