--- a/src/tags/service-tags.njk
+++ b/src/tags/service-tags.njk
@@ -6,8 +6,8 @@ pagination:
 permalink: /service-tags/{{ tag }}/
 layout: base.njk
 renderData:
-  title: "Servizi taggati come “{{ tag }}”"
-  metaDescription: "Tutti i servizi taggati come “{{ tag }}”"
+  title: "Servizi taggati come {{ tag }}"
+  metaDescription: "Tutti i servizi taggati come {{ tag }}"
 ---
 <div class="page-container">
   {# Header #}
