--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,9 +1,5 @@
 <footer class="site-footer">
   <small>
-    Sito web costruito con <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>.
-    {# Codice sorgente su <a href="{{ pkg.repository.url }}" target="_blank">GitHub</a>. #}
-    Grazie a 👋 <a href="https://www.tylerroderick.com/" target="_blank">Tyler M. Roderick</a> per il suo tema <a href="https://github.com/TylerMRoderick/fernfolio-11ty-template?tab=readme-ov-file" target="_blank">Fernfolio</a> 
-    e a <a href="https://www.freepik.com/author/juicy-fish" target="_blank">@juicy_fish</a> per il tramonto nel logo.<br><br>
-    AUM di Adriano Urso - P.IVA IT12373000962 
+    AUM di Adriano Urso - P.IVA IT12373000962 - <a href="/credits">credits</a>
   </small>
 </footer>
