--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -26,7 +26,7 @@
             <a
               class="site-header__link"
               href="{{ entry.url | url }}"
-              {% if entry.url == page.url %} aria-current data-current="current item"{% endif %}
+              {% if entry.url in page.url %} aria-current data-current="current item"{% endif %}
             >
               {{ entry.title }}
             </a>
