--- a/src/_layouts/contact.njk
+++ b/src/_layouts/contact.njk
@@ -14,8 +14,8 @@ section: contact
 
   {% include "partials/form.njk" %}
 
-
-  <div class="hero__body">Grazie! 👋<br>
+<hr><p></p>
+  <div class="hero__body"><p>Grazie! 👋<br></p>
     <a class="hero__link" href="/">← Torna alla home</a>
   </div>
 
