--- a/src/_includes/partials/form.njk
+++ b/src/_includes/partials/form.njk
@@ -30,8 +30,8 @@
     autocomplete="phone"
     placeholder="numero di telefono"
   ></p>
-  <p><label>argomento:</label>
-  <select name="argomento[]" multiple required placeholder="per cosa mi contatti?">
+  <p><label>interesse:</label>
+  <select name="interesse[]" multiple required placeholder="per cosa mi contatti?">
       <option value="accessibilita">accessibilità</option>
       <option value="digital marketing">digital marketing</option>
       <option value="business development">business development</option>
