--- a/src/tags/service-tags.njk
+++ b/src/tags/service-tags.njk
@@ -5,15 +5,15 @@ pagination:
   alias: tag
 permalink: /service-tags/{{ tag }}/
 layout: base.njk
-renderData:
-  title: "Servizi taggati come {{ tag }}"
-  metaDescription: "Tutti i servizi taggati come {{ tag }}"
+eleventyComputed:
+  title: "Servizi taggati come «{{ tag }}»"
+  metaDescription: "Tutti i servizi taggati come «{{ tag }}»"
 ---
 <div class="page-container">
   {# Header #}
   <div class="tag-list tag-list--no-wrap">
-    <h4 class="tag-list__title">Servizi taggati come: "{{ tag | capitalize }}"</h4>
-    <a class="btn btn--sm btn--danger" href="/servizi">Togli questo tag</a>
+    <h4 class="tag-list__title">Servizi taggati come: «{{ tag }}»</h4>
+    <a class="btn btn--sm btn--danger" href="/servizi">rimuovi tag</a>
   </div>
 
   {# Projects #}
@@ -22,6 +22,6 @@ renderData:
 
   {# Footer #}
   <nav>
-    <a href="{{ '/servizi/' | url }}">← Vai agli altri servizi</a>
+    <a href="{{ '/servizi/' | url }}">← Vai a tutti i servizi</a>
   </nav>
 </div>
