--- a/src/index.njk
+++ b/src/index.njk
@@ -78,7 +78,7 @@ section: home
   <div class="hero__body">
     <div class=""><p></p>
     <h2 class="list-header__title"><p>SIGEP</p></h2>
-    <p>Se ci siamo conosciuti in fiera <strong><a href="/sigep" target="_blank">visita questa pagina</a></strong>.</p>
+    <p>Se ci siamo conosciuti in fiera <a href="/sigep">visita questa pagina</a>.</p>
     ☎️ Cosa ne dici, <a class="hero__link" href="/contatti">organizziamo una chiamata?</a> 
     </div>
   </div>
