--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ renderData.title or title or metadata.title }}</title>
+  <title>{% if page.url == '/' %}{{ metadata.title }}{% else %}Adriano Urso - {{ renderData.title or title or metadata.title }}{% endif %}</title>
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or summary or metadata.description }}">
   <meta property="og:image" content="/assets/img/sunset-giallo.png">
   {# <link rel="dns-prefetch" href="https://identity.netlify.com"> #}
